# gemini-docs

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  update-docs.yml
gemini_docs/: __init__.py  __main__.py  generator.py  mcp_server.py  models.py  registry.py  scraper.py  sources.py
gemini_docs/docs/: document_processing.py  function_calling_chart.py  function_calling_meeting.py  function_calling_weather.py  structured_output_feedback.py  structured_output_recipe.py  structured_output_recursive.py  text_generation.py
gemini_docs/markdown/: document-processing-gemini.md  function-calling-chart-gemini.md  function-calling-meeting-gemini.md  function-calling-weather-gemini.md  structured-output-feedback-gemini.md  structured-output-recipe-gemini.md  structured-output-recursive-gemini.md  text-generation-gemini.md
